# mcp-ollama-link

./: 2025-01-28-meta-memory.json  README.md  pyproject.toml
src/mcp_ollama_link/: query_ollama.py  query_ollama_lib.py  query_ollama_qa copy.py  query_ollama_qa.py  query_ollama_st.py  server.py
