[project]
name = "mcp-ollama-link"
version = "0.1.0"
description = "Initiate Ollama queries via Claude."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [ "mcp>=1.2.1", "httpx>=0.25.0"]
[[project.authors]]
name = "truaxki"
email = "truaxki@gmail.com"

[build-system]
requires = [ "hatchling",]
build-backend = "hatchling.build"

[project.scripts]
mcp-ollama-link = "mcp_ollama_link:main"
